<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Signet</string>
    <string name="company_website">website: aloflux.com</string>
    <string name="company_website_url">https://aloflux.com</string>
    <string name="company_email">info@aloflux.com</string>
    <string name="product_of_company">A product of Aloflux LLC</string>
    <string name="company_footer">A product of Aloflux LLC\naloflux.com</string>
    <string name="about_message">Signet\nVersion 1.0.0\n\nA product of Aloflux LLC\n\naloflux.com\ninfo@aloflux.com</string>
    <string name="add_pdf">Add PDF</string>
    <string name="action_refresh">Refresh</string>
    <string name="pdf_page">PDF Page</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="open_pdf">Open PDF</string>
    <string name="open_pdf_desc">Browse and select a PDF file</string>
    <string name="history">History</string>
    <string name="history_desc">View recently opened files</string>
    <string name="recent_files">Recent Files</string>
    <string name="no_history">No recently opened files</string>
    <string name="search_files">Search</string>
    <string name="search_results">Search Results</string>
    <string name="no_files_found">No files found</string>
    <string name="searching">Searching…</string>
    <string name="merge_pdfs">Merge PDFs</string>
    <string name="sign_document">Sign PDF</string>
    <string name="image_to_pdf">Image to PDF</string>
    <string name="open_epub">Open EPUB</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="sign_here">Sign here</string>
    <string name="add_signature">Tap to place signature</string>
    <string name="select_images">Select Images</string>
    <string name="create_pdf">Create PDF</string>
    <string name="select_pdfs_to_merge">Select PDFs to merge</string>
    <string name="merge">Merge</string>
    <string name="saved_to">Saved to: %s</string>
    <string name="error_occurred">An error occurred</string>
    <string name="page_info">Page %1$d of %2$d</string>
</resources>
